--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,15 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "independent"
+    "command": {
+        "publish": {
+            "allowBranch": "master",
+            "bump": "patch",
+            "conventionalCommits": true,
+            "message": "chore(release): Publish"
+        }
+    },
+    "packages": ["packages/*"],
+    "npmClient": "yarn",
+    "registry": "https://registry.npmjs.org/",
+    "version": "independent",
+    "useWorkspaces": true
 }
