--- a/package.json
+++ b/package.json
@@ -57,9 +57,12 @@
         "url": "git://github.com/pavjacko/renative.git"
     },
     "scripts": {
+        "lerna-prepare": "lerna run prepare",
+        "bootstrap": "npm-run-all -s \"lerna-prepare -- --{@}\" --",
         "build": "lerna run build",
         "lerna": "npx lerna bootstrap",
-        "link": "cd ./packages/rnv && npm link",
+        "link": "cd ./packages/rnv && yarn link",
+        "publish-canary": "lerna publish --canary --yes",
         "postinstall": "npx jetify",
         "prePublish": "rnv hooks run -x prePublish",
         "publish": "npm run prePublish && npm run publish:rnv && npm run publish:renative && npm run publish:hello && npm run publish:blank && npm run publish:sink",
@@ -91,6 +94,7 @@
         "@react-navigation/web": "1.0.0-alpha.9",
         "@rnv/deploy-docker": "latest",
         "husky": "3.0.5",
+        "raf": "3.4.1",
         "react": "16.9.0",
         "react-art": "16.9.0",
         "react-dom": "16.9.0",
@@ -103,8 +107,7 @@
         "react-native-web-image-loader": "0.0.5",
         "react-navigation": "3.9.2",
         "react-navigation-tabs": "2.0.0-alpha.0",
-        "renative": "file:./packages/renative",
-        "raf": "3.4.1"
+        "renative": "file:./packages/renative"
     },
     "devDependencies": {
         "concurrently": "4.1.1",
@@ -112,6 +115,7 @@
         "electron-builder": "21.1.1",
         "jetifier": "1.6.4",
         "lerna": "3.16.4",
+        "npm-run-all": "^4.1.5",
         "renative-template-blank": "file:./packages/renative-template-blank",
         "renative-template-hello-world": "file:./packages/renative-template-hello-world",
         "renative-template-kitchen-sink": "file:./packages/renative-template-kitchen-sink",
@@ -141,5 +145,8 @@
         "hooks": {
             "pre-commit": "pretty-quick --staged && npm run test:rnv:unit"
         }
-    }
+    },
+    "workspaces": [
+        "packages/*"
+    ]
 }
