--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,10 @@
 {
     "command": {
         "publish": {
-            "allowBranch": "master",
+            "allowBranch": ["master", "feat/*"],
             "bump": "patch",
             "conventionalCommits": true,
-            "message": "chore(release): Publish"
+            "message": "chore(release): Publish %s"
         }
     },
     "packages": ["packages/*"],
